--- a/index.html
+++ b/index.html
@@ -4,4 +4,5 @@
     <head>
         <title>My awesome web page</title>
     </head>
+    <img src="https://octodex.github.com/images/vinyltocat.png">
 </html>
