--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@
     <head>
         <title>My awesome web page</title>
     </head>
-    <img src="https://octodex.github.com/images/vinyltocat.png">
+    <img src="https://avatars.githubusercontent.com/u/104976184?v=4">
 </html>
