--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@
         <title>My awesome web page</title>
     </head>
     <img src="https://avatars.githubusercontent.com/u/104976184?v=4">
+  </body>
 </html>
