--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
   <body>
     <h1>I'm a header 1!</h1>
     <head>
-        <title>My awesome web page</title>
+<img src="https://avatars.githubusercontent.com/u/104976184?v=4">
+
     </head>
     <img src="https://avatars.githubusercontent.com/u/104976184?v=4">
   </body>
