--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
   <body>
     <h1>I'm a header 1!</h1>
     <head>
-<img src="https://avatars.githubusercontent.com/u/104976184?v=4">
+*nice
+*good
 
     </head>
     <img src="https://avatars.githubusercontent.com/u/104976184?v=4">
