--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
     <ul>
       <li> https://lab.github.com/DeustoKom/msgw-web-development-for-journalistic-products/</li>
     </ul>
-  </body>
+      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
 </html>
