--- a/index.html
+++ b/index.html
@@ -6,8 +6,5 @@
 
     </head>
     <img src="https://avatars.githubusercontent.com/u/104976184?v=4">
-    <ul>
-      <li> https://lab.github.com/DeustoKom/msgw-web-development-for-journalistic-products/</li>
-    </ul>
-      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
+  </body>
 </html>
