--- a/index.html
+++ b/index.html
@@ -10,4 +10,5 @@
       <li> https://lab.github.com/DeustoKom/msgw-web-development-for-journalistic-products/</li>
     </ul>
       <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
+      </body>
 </html>
